2002-03-09  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/studio.cc,Makefile.am: Start using 'exult.cfg' to get paths,
	  and to save/restore window size.

2002-03-08  Ryan Nunn  <triforce@merlin.net.au>
	* audio/xmidi.cc : A MSVCism

2002-03-08  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conf/Configuration.cc: only use std::isspace if it isn't a macro

2002-03-08  Max Horn  <max@quendi.de>
	* files/util.*, gumps/gump_util.*: moved newstrdup to files/util.cc
	* audio/xmidi.cc, conf/Configuration.cc, conf/XMLEntity.cc, game.cc,
	  gamemap.h, sigame.cc: fixed namespace issues, added #include cassert, cleanup
	* version.cc: fixed version output for MetroWerks CodeWarrior
	* tools/expack.cc: fixed incorrect usage of crc32, now uses crc32_syspath
	* files/crc.cc: specify std::ios::in when opening file
	* files/util.h: fixed various Read* methods to work properly once more
	  (hint: the order in which (foo | bar) is evaluated is not defined in ANSI C)

2002-03-08  Dominik Reichardt <gigdr@tesionmail.de>
	* FAQ, ReadMe updated
	* docs/FAQ.html and ReadMe.html updated
	* docs/xml: makefile, makefile.win32 renames docs.html to ReadMe.html
	* docs/xml: faq.xml, docs.xml updated
	* docs/xml: *.xsl, docs.dtd with extref1,extref2 you can link 
	  between the FAQ and Documentation

2002-03-07  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* ucinternal.cc: also set quality when creating items on ground

2002-03-07  Max Horn  <max@quendi.de>
	* tools/ipack.cc, tools/textpack.cc: fixed compile problems with gcc 3

2002-03-06  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* imagewin/imagewin.h: include <string>
	* imagewin/imagewin.cc: include utils.h

2002-03-06  Ryan Nunn  <triforce@merlin.net.au>
	* exult.cc, exultmenu.cc, gumps/VideoOptions_gump.cc,
	  imagewin/imagescl.cc, imagewin/imagewin.*, imagewin/scale.* :
	  Added Kreed's BilinearPlus scaler. Also added some utility functions