@@ -1,3 +1,9 @@
+2002-03-15  Jeff Freedman  <jsf@usf-cf-x86-linux-1>
+
+	* shapes/vgafile.{cc,h}:  New methods for constructing, modifying 
+	shapes and writing them out.
+	* tools/ipack.cc: Use new methods in Shape class for writing.
+
 2002-03-09  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* mapedit/studio.cc,Makefile.am: Start using 'exult.cfg' to get paths,
